# jimvd

./: .gitignore  AGENTS.md  Cargo.toml  LIMITATIONS.md  README.md  extended_adversarial_snapshots.json
.cargo/: config.toml
analysis/: Project.toml  halflife_report.jl
benchmark-suite/: Cargo.toml
benchmark-suite/configs/: iam_10m.toml  iam_1m.toml  mixed_workload.toml  product_catalog.toml
benchmark-suite/crates/benchmark_orchestrator/: Cargo.toml
benchmark-suite/crates/benchmark_orchestrator/src/: drift_simulator.rs  evolution.rs  join_explosion.rs  lib.rs  main_event.rs  scaling_wall.rs
benchmark-suite/crates/data_generator/: Cargo.toml
benchmark-suite/crates/data_generator/src/: lib.rs
benchmark-suite/crates/duckdb_runner/: Cargo.toml
benchmark-suite/crates/duckdb_runner/src/: lib.rs
benchmark-suite/crates/jimvd_runner/: Cargo.toml
benchmark-suite/crates/jimvd_runner/src/: lib.rs
benchmark-suite/crates/metrics/: Cargo.toml
benchmark-suite/crates/metrics/src/: lib.rs
benchmark-suite/crates/postgres_runner/: Cargo.toml
benchmark-suite/crates/postgres_runner/src/: lib.rs
benchmark-suite/crates/report_generator/: Cargo.toml
benchmark-suite/crates/report_generator/src/: lib.rs
benchmark-suite/crates/runner/: Cargo.toml
benchmark-suite/crates/runner/src/: main.rs
benchmark-suite/crates/runner_api/: Cargo.toml
benchmark-suite/crates/runner_api/src/: lib.rs
benchmark-suite/crates/validation/: Cargo.toml
benchmark-suite/crates/validation/src/: lib.rs
benchmark-suite/crates/workload_generator/: Cargo.toml
benchmark-suite/crates/workload_generator/src/: lib.rs
benchmark-suite/duckdb_runner/: Cargo.toml
benchmark-suite/duckdb_runner/src/: main.rs
benchmark-suite/results/: drift_sim.json  join_explosion.json  main_event.csv  main_event.json  scaling_wall.csv  scaling_wall.json
benchmarks/: adversarial_config.json  extended_adversarial.json  high_write.json  workload_advanced.json
config/: adversarial_aggressive.json  adversarial_lowcorr.json  adversarial_row_reconstruction.json  adversarial_truelowcorr.json  join_test.json  join_workload.json  many_to_many.json  workload_iam.json
docs/: phase8_visualisation.md  phase9_halflife.md
jimvd/: Cargo.toml
jimvd/src/: benchmark.rs  cover.rs  metrics.rs  query.rs  storage.rs  types.rs  workload.rs
julia/: Project.toml  halflife_report.jl  plot_metrics.jl
results/: main_event.csv  main_event.json
scripts/: setup_julia.sh
src/: benchmark.rs  catalog.rs  cover.rs  graph.rs  jit.rs  lib.rs  main.rs  metrics.rs  types.rs  workload.rs
