[package]
name = "jimvd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11.10"
clap = { version = "4", features = ["derive"] }
bitvec = "1"
rand = "0.10.1"


[[bin]]
name = "jimvd"
path = "src/main.rs"

[[bin]]
name = "adversarial_test"
path = "src/bin/adversarial_test.rs"
