[package]
name = "duckdb_runner"
version = "0.1.0"
edition = "2021"

[features]
default = ["duckdb"]
duckdb  = ["dep:duckdb"]

[dependencies]
runner_api         = { path = "../runner_api" }
data_generator     = { path = "../data_generator" }
workload_generator = { path = "../workload_generator" }
metrics            = { path = "../metrics" }
anyhow             = { workspace = true }
log                = { workspace = true }
duckdb = { version = "1", optional = true, features = ["bundled"] }
